@@ -3,8 +3,8 @@ Type: Package
 Author: Jing Zhou, Yuxuan Shui
 Maintainer: Jing ZHou <12210240050@fudan.edu.cn>
 Title: MeSH(Medical Subject Headings) Semantic Similarity Measures
-Version: 0.99.2
-Date: 2014-12-14
+Version: 0.99.3
+Date: 2015-01-11
 Imports: XML, RCurl
 Depends: R(>= 3.0.0)
 Description: Provide for measuring semantic similarity over MeSH
